--- a/conda_environment.yml
+++ b/conda_environment.yml
@@ -4,64 +4,14 @@ channels:
   - anaconda
   - defaults
 dependencies:
-  - blas=1.0=mkl
-  - bzip2=1.0.8=h1de35cc_0
-  - ca-certificates=2022.6.15=h033912b_0
-  - commonmark=0.9.1=py_0
-  - dataclasses=0.8=pyhc8e2a94_3
-  - et_xmlfile=1.0.1=py_1001
-  - intel-openmp=2021.4.0=hecd8cb5_3538
-  - libcxx=12.0.0=h2f01273_0
-  - libffi=3.3=hb1e8313_2
-  - libgfortran=3.0.1=h93005f0_2
-  - libllvm11=11.1.0=hd011deb_3
-  - libzlib=1.2.12=hfe4f2af_2
-  - llvm-openmp=14.0.4=ha654fa7_0
-  - mkl=2021.4.0=hecd8cb5_637
-  - mkl_fft=1.3.1=py310hf879493_0
-  - mkl_random=1.2.2=py310hc081a56_0
-  - ncurses=6.3=hca72f7f_2
-  - networkx=2.7.1=pyhd3eb1b0_0
-  - numpy-base=1.21.5=py310hfd2de13_3
-  - openpyxl=3.0.9=pyhd8ed1ab_0
-  - openssl=1.1.1q=hfe4f2af_0
-  - packaging=21.3=pyhd8ed1ab_0
+  - networkx=2.7.1
+  - numpy-base=1.21.5
   - pip
-  - pycparser=2.21=pyhd8ed1ab_0
-  - pygments=2.12.0=pyhd8ed1ab_0
-  - pyparsing=3.0.9=pyhd8ed1ab_0
-  - python=3.10.4=hdfd78df_0
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python_abi=3.10=2_cp310
-  - pytz=2022.1=pyhd8ed1ab_0
-  - readline=8.1.2=hca72f7f_1
-  - rich=12.5.1=pyhd8ed1ab_0
-  - six=1.16.0=pyhd3eb1b0_1
-  - sqlite=3.38.5=h707629a_0
-  - tbb=2021.5.0=h940c156_0
-  - tk=8.6.12=h5d9f67b_0
-  - typing_extensions=4.3.0=pyha770c72_0
-  - tzdata=2022a=hda174b7_0
-  - wheel=0.37.1=pyhd3eb1b0_0
-  - xlrd=2.0.1=pyhd8ed1ab_3
-  - xlsxwriter=3.0.3=pyhd8ed1ab_0
-  - xz=5.2.5=hca72f7f_1
-  - zlib=1.2.12=h4dc903c_2
+  - python=3.10.4
+  - rich=12.5.1
   - pip:
-    - bottleneck==1.3.5
-    - certifi==2022.6.15
-    - cffi==1.15.1
-    - cryptography==37.0.4
-    - future==0.18.2
-    - llvmlite==0.38.0
-    - mkl-fft==1.3.1
-    - mkl-random==1.2.2
-    - mkl-service==2.4.0
     - numba==0.55.1
-    - numexpr==2.8.3
-    - numpy==1.21.5
     - pandas==1.4.3
-    - pandapower
+    - pandapower==2.10.1
     - pip==21.2.4
     - scipy==1.7.3
-    - setuptools==61.2.0
